trying to fix graphs on mobile.

--- a/public/stylesheets/graphs.css
+++ b/public/stylesheets/graphs.css
@@ -1,6 +1,12 @@
 .column.chart {
   min-height: 300px;
-  height: 400px;
+  width: 100%;
+}
+
+.chart-container {
+  position: relative;
+  height: 40vh;
+  width: 80vw;
 }
 
 /*# sourceMappingURL=graphs.css.map */
